crud categorias, correcciones en webmaster arrendamiento y otros

--- a/WebApplication1/Areas/webmaster/Views/titulares/agregarTitulo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/agregarTitulo.cshtml
@@ -188,7 +188,7 @@
                             <div class="form-group row">
                                 <label for="example-date-input" class="col-sm-3 col-form-label">Desde</label>
                                 <div class="col-sm-9">
-                                    <input name="since"
+                                    <input class="hiddenRequired" name="since"
                                            id="fecha2">
                                     <small class="form-text text-muted">Mes / día / año</small>
                                 </div>
@@ -196,7 +196,7 @@
                             <div class="form-group row">
                                 <label for="example-date-input" class="col-sm-3 col-form-label">Hasta</label>
                                 <div class="col-sm-9">
-                                    <input name="until"
+                                    <input class="hiddenRequired" name="until"
                                            id="fecha3">
                                     <small class="form-text text-muted">Mes / día / año</small>
                                 </div>
@@ -208,7 +208,7 @@
                             <div class="form-group row">
                                 <label for="example-name2-input" class="col-sm-3 col-form-label">Nombre</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="30" class="form-control soloTexto" type="text" value="" name="tenant_first_name1"
+                                    <input maxlength="30" class="form-control soloTexto hiddenRequired" type="text" value="" name="tenant_first_name1"
                                            data-toggle="tooltip" title="Nombre del arrendatario"
                                            placeholder="Nombre" id="example-name2-input">
                                     <small class="form-text text-muted">Nombre del arrendatario</small>
@@ -217,7 +217,7 @@
                             <div class="form-group row">
                                 <label for="example-lastname2-input" class="col-sm-3 col-form-label">Apellido paterno</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="20" class="form-control soloTexto" type="text" value="" name="tenant_last_name1"
+                                    <input maxlength="20" class="form-control soloTexto hiddenRequired" type="text" value="" name="tenant_last_name1"
                                            data-toggle="tooltip" title="Apellido paterno del arrendatario"
                                            placeholder="Apellido paterno" id="example-lastname2-input">
                                     <small class="form-text text-muted">Apellido paterno del arrendatario</small>
@@ -225,8 +225,8 @@
                             </div>
                             <div class="form-group row">
                                 <label for="example-lastname2m-input" class="col-sm-3 col-form-label">Apellido materno</label>
-                                <div class="col-sm-9">
-                                    <input maxlength="20" class="form-control soloTexto" type="text" value="" name="tenant_mother_last_name1" placeholder="Apellido materno"
+                                <div class="col-sm-9"> 
+                                    <input maxlength="20" class="form-control soloTexto hiddenRequired" type="text" value="" name="tenant_mother_last_name1" placeholder="Apellido materno"
                                            data-toggle="tooltip" title="Apellido materno del arrendatario"
                                            id="example-lastname2m-input">
                                     <small class="form-text text-muted">Apellido materno del arrendatario</small>
@@ -236,7 +236,7 @@
                             <div class="form-group row">
                                 <label for="example-address1-input" class="col-sm-3 col-form-label">Dirección postal</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="15" class="form-control" type="text" value="" name="leased_postal_address"
+                                    <input maxlength="15" class="form-control hiddenRequired" type="text" value="" name="leased_postal_address"
                                            data-toggle="tooltip" title="Dirección postal del arrendatario"
                                            placeholder="Dirección postal" id="example-address1-input">
                                     <small class="form-text text-muted">Dirección postal del arrendatario</small>
@@ -249,7 +249,7 @@
                             <div class="form-group row">
                                 <label for="example-address2-input" class="col-sm-3 col-form-label">Dirección residencial</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="156" class="form-control" type="text" value="" placeholder="Dirección residencial"
+                                    <input maxlength="156" class="form-control hiddenRequired" type="text" value="" placeholder="Dirección residencial"
                                            data-toggle="tooltip" title="Dirección residencial del arrendatario" name="leased_residential_address"
                                            id="example-address2-input">
                                     <small class="form-text text-muted">Dirección residencial del arrendatario</small>
@@ -293,6 +293,7 @@
 
 
 <script type="text/javascript">
+    
 
     (function () {
 
