--- a/WebApplication1/Areas/webmaster/Views/titulares/editarTitulo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/editarTitulo.cshtml
@@ -228,14 +228,14 @@
 
                                         {
 
-                                            <input required
+                                            <input class="hiddenRequired"
                                                    value="@Convert.ToDateTime(Model.titulo.since).ToString("MM/dd/yyyy")"
                                                    id="fecha22" name="since">
                                         }
                                         else
                                         {
 
-                                            <input id="fecha22" name="since">
+                                            <input class="hiddenRequired" id="fecha22" name="since">
 
                                         }
                                         @*  <small class="form-text text-muted">dia / Mes / año</small>*@
@@ -246,13 +246,13 @@
                                     <div class="col-sm-9">
                                         @if (Model.titulo.until != null)
                                         {
-                                            <input required
+                                            <input class="hiddenRequired"
                                                    value="@Convert.ToDateTime(Model.titulo.until).ToString("MM/dd/yyyy")"
                                                    id="fecha33" name="until">
                                         }
                                         else
                                         {
-                                            <input id="fecha33" name="until">
+                                            <input class="hiddenRequired" id="fecha33" name="until">
                                         }
                                         @*<small class="form-text text-muted">dia / Mes / año</small>*@
                                     </div>
@@ -264,7 +264,7 @@
                                 <div class="form-group row">
                                     <label for="example-name2-input" class="col-sm-3 col-form-label">Nombre</label>
                                     <div class="col-sm-9">
-                                        <input maxlength="30" class="form-control soloTexto"
+                                        <input maxlength="30" class="form-control soloTexto hiddenRequired"
                                                type="text" data-toggle="tooltip"
                                                value="@Model.titulo.tenant_first_name1"
                                                placeholder="Nombre"
@@ -276,7 +276,7 @@
                                 <div class="form-group row">
                                     <label for="example-lastname2-input-tenant-last-name" class="col-sm-3 col-form-label">Apellido paterno</label>
                                     <div class="col-sm-9">
-                                        <input maxlength="20" class="form-control soloTexto"
+                                        <input maxlength="20" class="form-control soloTexto hiddenRequired"
                                                type="text" data-toggle="tooltip"
                                                value="@Model.titulo.tenant_last_name1"
                                                name="tenant_last_name1"
@@ -288,7 +288,7 @@
                                 <div class="form-group row">
                                     <label for="example-lastname2m-input-tenant-mother-last-name" class="col-sm-3 col-form-label">Apellido materno</label>
                                     <div class="col-sm-9">
-                                        <input maxlength="20" class="form-control soloTexto"
+                                        <input maxlength="20" class="form-control soloTexto hiddenRequired"
                                                type="text" data-toggle="tooltip"
                                                value="@Model.titulo.tenant_mother_last_name1"
                                                name="tenant_mother_last_name1"
@@ -301,7 +301,7 @@
                                 <div class="form-group row">
                                     <label for="example-address1-input-leased-postal-address" class="col-sm-3 col-form-label">Dirección postal</label>
                                     <div class="col-sm-9">
-                                        <input maxlength="15" class="form-control"
+                                        <input maxlength="15" class="form-control hiddenRequired"
                                                type="text" data-toggle="tooltip"
                                                value="@Model.titulo.leased_postal_address"
                                                name="leased_postal_address"
@@ -314,7 +314,7 @@
                                 <div class="form-group row">
                                     <label for="example-address2-input-leased-residential-address" class="col-sm-3 col-form-label">Dirección residencial</label>
                                     <div class="col-sm-9">
-                                        <input maxlength="156" class="form-control"
+                                        <input maxlength="156" class="form-control hiddenRequired"
                                                type="text"
                                                value="@Model.titulo.leased_residential_address"
                                                data-toggle="tooltip"
